@@ -1887,7 +1887,7 @@ public class TestHRegion extends HBaseTestCase {
     // Make lease timeout longer, lease checks less frequent
     conf.setInt("hbase.master.lease.thread.wakefrequency", 5 * 1000);
     
-    conf.setInt("hbase.regionserver.lease.period", 10 * 1000);
+    conf.setInt(HConstants.HBASE_REGIONSERVER_LEASE_PERIOD_KEY, 10 * 1000);
     
     // Increase the amount of time between client retries
     conf.setLong("hbase.client.pause", 15 * 1000);
